Bug 454790 - Allow programmatic selection of -moz-user-select: none frames. r=roc